# avr-guess-the-number

./: Cargo.toml  LICENSE  README.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: animation.rs  button.rs  filled_seven_segment.rs  filled_sipo.rs  led_matrix.rs  rng.rs  seven_segment.rs  sipo.rs
pcb/Altium/: PCB1.PcbDoc  guess_the_number.SchDoc
src/: animation.rs  button.rs  eeprom.rs  entrypoint.rs  filled_seven_segment.rs  filled_sipo.rs  led_matrix.rs  rng.rs  seven_segment.rs  sipo.rs
