[package]
name = "guess-the-number"
version = "0.1.0"
authors = ["František Boháček <fandabohacek@gmail.com>"]
edition = "2021"

[[bin]]
path = "src/entrypoint.rs"
name = "guess-the-number"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"

[dependencies.atmega-hal]
features = ["rt","atmega8"]
git = "https://github.com/Rahix/avr-hal.git"
rev = "3c02df9df80e7585765644a87076680a2d99b29a"

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal.git"
rev = "3c02df9df80e7585765644a87076680a2d99b29a"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
debug = false
lto = true
opt-level = "s"
